--- a/proyecto-springboot/autentication_sprintboot/src/main/resources/application.properties
+++ b/proyecto-springboot/autentication_sprintboot/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=autentication_sprintboot
+server.port=8090
+
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dboffice?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=alexander2198
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+
