feat: :sparkles: Added initial configuration of new structure

--- a/BackEnd/Products/CreateProduct/Dockerfile
+++ b/BackEnd/Products/CreateProduct/Dockerfile
@@ -1,18 +1,21 @@
-# Usa la imagen oficial de Go
+# Imagen base
 FROM golang:1.20
 
-# Establece el directorio de trabajo
+# Directorio de trabajo
 WORKDIR /app
 
-# Copia los archivos del proyecto
+# Copiar dependencias
+COPY go.mod go.sum ./
+RUN go mod download
+
+# Copiar el código fuente
 COPY . .
 
-# Descarga dependencias y compila
-RUN go mod tidy
-RUN go build -o create-service main.go
+# Compilar el servicio
+RUN go build -o create-product-service main.go
 
-# Expone el puerto del servicio
-EXPOSE 8081
+# Exponer el puerto del servicio
+EXPOSE 8082
 
-# Ejecuta el servicio
-CMD ["./create-service"]
+# Comando para ejecutar el servicio
+CMD ["./create-product-service"]
