--- a/BackEnd/Products/CreateProduct/.env
+++ b/BackEnd/Products/CreateProduct/.env
@@ -1,2 +1,5 @@
-MONGO_URI=mongodb://mongodb:27017
+#MONGO_URI=mongodb://mongodb:27017
+#Local Development
+MONGO_URI=mongodb://localhost:27017
+
 APP_PORT=8082
