--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,77 +1,26 @@
-version: "3.8"
-
+version: '3.9'
 services:
-  # Servicio de base de datos MongoDB
   mongodb:
     image: mongo:latest
     container_name: mongodb
     ports:
       - "27017:27017"
-    volumes:
-      - mongo-data:/data/db
     networks:
-      - ecommerce-network
+      - app-network
 
-  # Servicio CreateProduct
   create-product:
     build:
-      context: ./backend/products/createproduct
+      context: ./BackEnd/Products/CreateProduct
     container_name: create-product
+    environment:
+      - MONGO_URI=mongodb://mongodb:27017
     ports:
       - "8082:8082"
     depends_on:
       - mongodb
-    environment:
-      - MONGO_URI=mongodb://mongodb:27017
     networks:
-      - ecommerce-network
-
-  # Servicio GetProducts
-  get-products:
-    build:
-      context: ./backend/products/getproducts
-    container_name: get-products
-    ports:
-      - "8083:8083"
-    depends_on:
-      - mongodb
-    environment:
-      - MONGO_URI=mongodb://mongodb:27017
-    networks:
-      - ecommerce-network
-
-  # Servicio DeleteProduct
-  delete-product:
-    build:
-      context: ./backend/products/deleteproduct
-    container_name: delete-product
-    ports:
-      - "8084:8084"
-    depends_on:
-      - mongodb
-    environment:
-      - MONGO_URI=mongodb://mongodb:27017
-    networks:
-      - ecommerce-network
-
-  # Servicio UpdateProduct
-  update-product:
-    build:
-      context: ./backend/products/updateproduct
-    container_name: update-product
-    ports:
-      - "8085:8085"
-    depends_on:
-      - mongodb
-    environment:
-      - MONGO_URI=mongodb://mongodb:27017
-    networks:
-      - ecommerce-network
-
-volumes:
-  mongo-data:
-    driver: local
+      - app-network
 
 networks:
-  ecommerce-network:
+  app-network:
     driver: bridge
