--- a/BackEnd/Products/CreateProduct/.env
+++ b/BackEnd/Products/CreateProduct/.env
@@ -1,5 +1,3 @@
-#MONGO_URI=mongodb://mongodb:27017
-#Local Development
-MONGO_URI=mongodb://localhost:27017
-
+MONGO_URI=mongodb://mongodb-products:27017/products_db
 APP_PORT=8082
+GRAPHQL_URL=http://graphql-gateway:8080/graphql
