--- a/proyecto-springboot/BACKEND/login_springboot/src/main/resources/application.properties
+++ b/proyecto-springboot/BACKEND/login_springboot/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 spring.application.name=login_springboot
 server.port=8091
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/dboffice?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=alexander2198
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
