--- a/proyecto-springboot/BACKEND/springboot_update_employee/src/main/resources/application.properties
+++ b/proyecto-springboot/BACKEND/springboot_update_employee/src/main/resources/application.properties
@@ -4,11 +4,9 @@ server.port=8092
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/dboffice?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=alexander2198
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
