feat: :sparkles: jar and correct dockerfile

--- a/proyecto-springboot/BACKEND/springboot_update_employee/pom.xml
+++ b/proyecto-springboot/BACKEND/springboot_update_employee/pom.xml
@@ -99,8 +99,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<layers>
+						<enabled>true</enabled>
+					</layers>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+	<packaging>jar</packaging>
+
 
 </project>
