--- a/proyecto-springboot/BACKEND/delete_employee/Dockerfile
+++ b/proyecto-springboot/BACKEND/delete_employee/Dockerfile
@@ -3,7 +3,7 @@ FROM eclipse-temurin:21-jdk-alpine
 
 # Establece el directorio de trabajo en el contenedor
 WORKDIR /app
-
+COPY .env .env
 # Copia el archivo JAR del microservicio al contenedor
 COPY target/delete_employee-0.0.1-SNAPSHOT.jar app.jar
 
