--- a/BackEnd/Domains/Categories/GetCategoryById/.env
+++ b/BackEnd/Domains/Categories/GetCategoryById/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://mongodb-categories:27017/categories_db
+MONGO_URI=mongodb+srv://admin:1234PDistribuida@category.dloun.mongodb.net/category_db?retryWrites=true&w=majority
 APP_PORT=80
