--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,73 +1,100 @@
-deploy-to-ec2:
-  needs: build-and-push
-  runs-on: ubuntu-latest
 
-  steps:
-    - name: Deploy to CreateCategory QA
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST_DNS_CREATECATEGORY_QA }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
-          sudo apt update -y
-          sudo apt install -y docker.io
-          sudo systemctl start docker
-          sudo systemctl enable docker
-          sudo usermod -aG docker $USER
-          sudo chmod 666 /var/run/docker.sock
-          
-          docker pull sebastianperez02/categories-app:latest
-          docker stop category-service || true
-          docker rm category-service || true
-          docker run -d --name category-service --network host \
-            -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-            sebastianperez02/categories-app:latest
-          
-          echo "Deployed CreateCategory in QA"
+name: CI/CD Pipeline for Category Services
 
-    - name: Deploy to GetAllCategories QA
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST_DNS_GETALLCATEGORIES_QA }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
-          sudo apt update -y
-          sudo apt install -y docker.io
-          sudo systemctl start docker
-          sudo systemctl enable docker
-          sudo usermod -aG docker $USER
-          sudo chmod 666 /var/run/docker.sock
-          
-          docker pull sebastianperez02/categories-app:latest
-          docker stop category-service || true
-          docker rm category-service || true
-          docker run -d --name category-service --network host \
-            -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-            sebastianperez02/categories-app:latest
-          
-          echo "Deployed GetAllCategories in QA"
+on:
+  push:
+    branches:
+      - Feature_CategoryDomain_GetAllCategories
+    paths:
+      - 'BackEnd/Domains/Categories/CreateCategory/**'
+      - 'BackEnd/Domains/Categories/GetAllCategories/**'
+      - 'BackEnd/Domains/Categories/GetCategoryByID/**'
 
-    - name: Deploy to GetByIDCategory QA
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
-          sudo apt update -y
-          sudo apt install -y docker.io
-          sudo systemctl start docker
-          sudo systemctl enable docker
-          sudo usermod -aG docker $USER
-          sudo chmod 666 /var/run/docker.sock
-          
-          docker pull sebastianperez02/categories-app:latest
-          docker stop category-service || true
-          docker rm category-service || true
-          docker run -d --name category-service --network host \
-            -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-            sebastianperez02/categories-app:latest
-          
-          echo "Deployed GetByIDCategory in QA"
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build Docker image
+        run: docker build -t sebastianperez02/categories-app .
+
+      - name: Push Docker image to DockerHub
+        run: docker push sebastianperez02/categories-app:latest
+
+  deploy-to-ec2:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to CreateCategory QA
+        if: contains(github.event.head_commit.message, 'CreateCategory')
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_CREATECATEGORY_QA }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo apt update -y
+            sudo apt install -y docker.io
+            sudo systemctl start docker
+            sudo systemctl enable docker
+            sudo usermod -aG docker $USER
+            sudo chmod 666 /var/run/docker.sock
+
+            docker pull sebastianperez02/categories-app:latest
+            docker stop category-service || true
+            docker rm category-service || true
+            docker run -d --name category-service --network host \
+              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+              sebastianperez02/categories-app:latest
+
+      - name: Deploy to GetAllCategories QA
+        if: contains(github.event.head_commit.message, 'GetAllCategories')
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_GETALLCATEGORIES_QA }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo apt update -y
+            sudo apt install -y docker.io
+            sudo systemctl start docker
+            sudo systemctl enable docker
+            sudo usermod -aG docker $USER
+            sudo chmod 666 /var/run/docker.sock
+
+            docker pull sebastianperez02/categories-app:latest
+            docker stop category-service || true
+            docker rm category-service || true
+            docker run -d --name category-service --network host \
+              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+              sebastianperez02/categories-app:latest
+
+      - name: Deploy to GetByIDCategory QA
+        if: contains(github.event.head_commit.message, 'GetByIDCategory')
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo apt update -y
+            sudo apt install -y docker.io
+            sudo systemctl start docker
+            sudo systemctl enable docker
+            sudo usermod -aG docker $USER
+            sudo chmod 666 /var/run/docker.sock
+
+            docker pull sebastianperez02/categories-app:latest
+            docker stop category-service || true
+            docker rm category-service || true
+            docker run -d --name category-service --network host \
+              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+              sebastianperez02/categories-app:latest
