--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-
 name: CI/CD Pipeline for Category Services
 
 on:
@@ -8,11 +7,17 @@ on:
     paths:
       - 'BackEnd/Domains/Categories/CreateCategory/**'
       - 'BackEnd/Domains/Categories/GetAllCategories/**'
-      - 'BackEnd/Domains/Categories/GetCategoryByID/**'
+      - 'BackEnd/Domains/Categories/GetCategoryById/**'
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service:
+          - CreateCategory
+          - GetAllCategories
+          - GetCategoryById
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -23,21 +28,34 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build Docker image
-        run: docker build -t sebastianperez02/categories-app .
+      - name: Build Docker image for ${{ matrix.service }}
+        run: |
+          docker build -t sebastianperez02/${{ matrix.service }} -f BackEnd/Domains/Categories/${{ matrix.service }}/Dockerfile BackEnd/Domains/Categories/${{ matrix.service }}
 
       - name: Push Docker image to DockerHub
-        run: docker push sebastianperez02/categories-app:latest
+        run: docker push sebastianperez02/${{ matrix.service }}:latest
 
   deploy-to-ec2:
     needs: build-and-push
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service: 
+          - CreateCategory
+          - GetAllCategories
+          - GetCategoryById
+        include:
+          - service: CreateCategory
+            host: ${{ secrets.HOST_DNS_CREATECATEGORY_QA }}
+          - service: GetAllCategories
+            host: ${{ secrets.HOST_DNS_GETALLCATEGORIES_QA }}
+          - service: GetCategoryById
+            host: ${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}
     steps:
-      - name: Deploy to CreateCategory QA
-        if: contains(github.event.head_commit.message, 'CreateCategory')
+      - name: Deploy ${{ matrix.service }} to EC2
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST_DNS_CREATECATEGORY_QA }}
+          host: ${{ matrix.host }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
@@ -48,53 +66,9 @@ jobs:
             sudo usermod -aG docker $USER
             sudo chmod 666 /var/run/docker.sock
 
-            docker pull sebastianperez02/categories-app:latest
-            docker stop category-service || true
-            docker rm category-service || true
-            docker run -d --name category-service --network host \
+            docker pull sebastianperez02/${{ matrix.service }}:latest
+            docker stop ${{ matrix.service }}-service || true
+            docker rm ${{ matrix.service }}-service || true
+            docker run -d --name ${{ matrix.service }}-service --network host \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-              sebastianperez02/categories-app:latest
-
-      - name: Deploy to GetAllCategories QA
-        if: contains(github.event.head_commit.message, 'GetAllCategories')
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST_DNS_GETALLCATEGORIES_QA }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            sudo apt update -y
-            sudo apt install -y docker.io
-            sudo systemctl start docker
-            sudo systemctl enable docker
-            sudo usermod -aG docker $USER
-            sudo chmod 666 /var/run/docker.sock
-
-            docker pull sebastianperez02/categories-app:latest
-            docker stop category-service || true
-            docker rm category-service || true
-            docker run -d --name category-service --network host \
-              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-              sebastianperez02/categories-app:latest
-
-      - name: Deploy to GetByIDCategory QA
-        if: contains(github.event.head_commit.message, 'GetByIDCategory')
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            sudo apt update -y
-            sudo apt install -y docker.io
-            sudo systemctl start docker
-            sudo systemctl enable docker
-            sudo usermod -aG docker $USER
-            sudo chmod 666 /var/run/docker.sock
-
-            docker pull sebastianperez02/categories-app:latest
-            docker stop category-service || true
-            docker rm category-service || true
-            docker run -d --name category-service --network host \
-              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-              sebastianperez02/categories-app:latest
+              sebastianperez02/${{ matrix.service }}:latest
