--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,9 @@ jobs:
     strategy:
       matrix:
         service:
-          - CreateCategory
-          - GetAllCategories
-          - GetCategoryById
+          - createcategory
+          - getallcategories
+          - getbyidcategory
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -29,36 +29,29 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build Docker image for ${{ matrix.service }}
-        run: |
-          docker build -t sebastianperez02/${{ matrix.service }} -f BackEnd/Domains/Categories/${{ matrix.service }}/Dockerfile BackEnd/Domains/Categories/${{ matrix.service }}
+        run: docker build -t sebastianperez02/categories-${{ matrix.service }} -f BackEnd/Domains/Categories/${{ matrix.service }}/Dockerfile .
 
       - name: Push Docker image to DockerHub
-        run: docker push sebastianperez02/${{ matrix.service }}:latest
+        run: docker push sebastianperez02/categories-${{ matrix.service }}:latest
 
   deploy-to-ec2:
     needs: build-and-push
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: 
-          - CreateCategory
-          - GetAllCategories
-          - GetCategoryById
+        service: [createcategory, getallcategories, getbyidcategory]
+        include:
+          - service: createcategory
+            host: ${{ secrets.HOST_DNS_CREATECATEGORY_QA }}
+          - service: getallcategories
+            host: ${{ secrets.HOST_DNS_GETALLCATEGORIES_QA }}
+          - service: getbyidcategory
+            host: ${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}
     steps:
-      - name: Set Host Variable
-        run: |
-          if [[ "${{ matrix.service }}" == "CreateCategory" ]]; then
-            echo "HOST=${{ secrets.HOST_DNS_CREATECATEGORY_QA }}" >> $GITHUB_ENV
-          elif [[ "${{ matrix.service }}" == "GetAllCategories" ]]; then
-            echo "HOST=${{ secrets.HOST_DNS_GETALLCATEGORIES_QA }}" >> $GITHUB_ENV
-          elif [[ "${{ matrix.service }}" == "GetCategoryById" ]]; then
-            echo "HOST=${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}" >> $GITHUB_ENV
-          fi
-
-      - name: Deploy ${{ matrix.service }} to EC2
+      - name: Deploy to EC2 for ${{ matrix.service }}
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ env.HOST }}
+          host: ${{ matrix.host }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
@@ -69,10 +62,10 @@ jobs:
             sudo usermod -aG docker $USER
             sudo chmod 666 /var/run/docker.sock
 
-            docker pull sebastianperez02/${{ matrix.service }}:latest
+            docker pull sebastianperez02/categories-${{ matrix.service }}:latest
             docker stop ${{ matrix.service }}-service || true
             docker rm ${{ matrix.service }}-service || true
+
             docker run -d --name ${{ matrix.service }}-service --network host \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-              sebastianperez02/${{ matrix.service }}:latest
-
+              sebastianperez02/categories-${{ matrix.service }}:latest
