--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,10 @@ jobs:
     strategy:
       matrix:
         service: 
-          - createcategory
-          - getallcategories
-          - getbyidcategory
+          - { name: "category-create", path: "CreateCategory" }
+          - { name: "category-get-all", path: "GetAllCategories" }
+          - { name: "category-get-by-id", path: "GetCategoryById" }
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -28,30 +29,29 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build Docker image for ${{ matrix.service }}
-        run: docker build -t sebastianperez02/${{ matrix.service }} -f BackEnd/Domains/Categories/${{ matrix.service }}/Dockerfile .
+      - name: Build Docker image for ${{ matrix.service.name }}
+        run: |
+          cd BackEnd/Domains/Categories/${{ matrix.service.path }}
+          docker build -t sebastianperez02/${{ matrix.service.name }} .
 
       - name: Push Docker image to DockerHub
-        run: docker push sebastianperez02/${{ matrix.service }}:latest
+        run: docker push sebastianperez02/${{ matrix.service.name }}:latest
 
   deploy-to-ec2:
     needs: build-and-push
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [createcategory, getallcategories, getbyidcategory]
-    steps:
-      - name: Set environment variables for ${{ matrix.service }}
-        run: |
-          if [[ "${{ matrix.service }}" == "createcategory" ]]; then
-            echo "HOST_DNS=${{ secrets.HOST_DNS_CREATECATEGORY_QA }}" >> $GITHUB_ENV
-          elif [[ "${{ matrix.service }}" == "getallcategories" ]]; then
-            echo "HOST_DNS=${{ secrets.HOST_DNS_GETALLCATEGORIES_QA }}" >> $GITHUB_ENV
-          elif [[ "${{ matrix.service }}" == "getbyidcategory" ]]; then
-            echo "HOST_DNS=${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}" >> $GITHUB_ENV
-          fi
+        service: 
+          - { name: "category-create", secret: "HOST_DNS_CREATECATEGORY_QA" }
+          - { name: "category-get-all", secret: "HOST_DNS_GETALLCATEGORIES_QA" }
+          - { name: "category-get-by-id", secret: "HOST_DNS_GETBYIDCATEGORY_QA" }
 
-      - name: Deploy to EC2 for ${{ matrix.service }}
+    steps:
+      - name: Set host variable
+        run: echo "HOST_DNS=${{ secrets[matrix.service.secret] }}" >> $GITHUB_ENV
+
+      - name: Deploy ${{ matrix.service.name }} to EC2
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.HOST_DNS }}
@@ -65,10 +65,9 @@ jobs:
             sudo usermod -aG docker $USER
             sudo chmod 666 /var/run/docker.sock
 
-            docker pull sebastianperez02/${{ matrix.service }}:latest
-            docker stop ${{ matrix.service }}-service || true
-            docker rm ${{ matrix.service }}-service || true
-
-            docker run -d --name ${{ matrix.service }}-service --network host \
+            docker pull sebastianperez02/${{ matrix.service.name }}:latest
+            docker stop ${{ matrix.service.name }} || true
+            docker rm ${{ matrix.service.name }} || true
+            docker run -d --name ${{ matrix.service.name }} --network host \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-              sebastianperez02/${{ matrix.service }}:latest
+              sebastianperez02/${{ matrix.service.name }}:latest
