--- a/proyecto-springboot/BACKEND/login_springboot/src/main/resources/application.properties
+++ b/proyecto-springboot/BACKEND/login_springboot/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=login_springboot
 server.port=8091
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+# Configuración de la base de datos MySQL
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+
+
