--- a/proyecto-springboot/BACKEND/read_employee_web/src/main/resources/application.properties
+++ b/proyecto-springboot/BACKEND/read_employee_web/src/main/resources/application.properties
@@ -2,13 +2,14 @@ spring.application.name=read_employee_web
 
 server.port=8094
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+# Configuración de la base de datos MySQL en AWS RDS
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Configuración de Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
