--- a/proyecto-springboot/BACKEND/springboot_update_employee/.env
+++ b/proyecto-springboot/BACKEND/springboot_update_employee/.env
@@ -1,3 +1,3 @@
-DB_URL=jdbc:mysql://mysql-db:3306/dboffice?createDatabaseIfNotExist=true
+DB_URL=jdbc:mysql://autentication.cbqo864i2luw.us-east-1.rds.amazonaws.com:3306/autentication?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 DB_USERNAME=root
-DB_PASSWORD=alexander2198
+DB_PASSWORD=Alexander1234*.
