--- a/proyecto-springboot/BACKEND/login_springboot/src/main/resources/application.yml
+++ b/proyecto-springboot/BACKEND/login_springboot/src/main/resources/application.yml
@@ -1,20 +1,5 @@
-spring:
-    security:
-        oauth2:
-            client:
-                registration:
-                    cognito:
-                        client-id: 92oh9nmejo0d5a5ga51il8u3o
-                        client-secret: g0g299qp14srmdk21p18bhv43068b4idildtgtdo8a3q9bk4k5m
-                        scope:
-                        - email
-                        - openid
-                        # Spring Security by default uses a redirect-uri in the format: {baseUrl}/login/oauth2/code/{registrationId}
-                        # For example: http://localhost:8080/login/oauth2/code/cognito
-                        # See more: https://docs.spring.io/spring-security/reference/servlet/oauth2/login/core.html#oauth2login-sample-redirect-uri
-                        redirect-uri: http://localhost:8091/login/oauth2/code/cognito
-                        
-                provider:
-                    cognito:
-                        issuerUri: https://cognito-idp.us-east-1.amazonaws.com/us-east-1_JudMXeuR1
-                        user-name-attribute: username
+aws:
+  cognito:
+    user-pool-id: us-east-1_JudMXeuR1
+    client-id: 92oh9nmejo0d5a5ga51il8u3o
+    client-secret: g0g299qp14srmdk21p18bhv43068b4idildtgtdo8a3q9bk4k5m
