fix: :construction: Changes ports of this microservice and change de URL

--- a/BackEnd/Domains/GraphQL-Gateway/.env
+++ b/BackEnd/Domains/GraphQL-Gateway/.env
@@ -1,2 +1,2 @@
-CATEGORY_SERVICE_URL=http://get-category-by-id:8087/category
-APP_PORT=8080
+CATEGORY_SERVICE_URL=http://ec2-54-175-208-181.compute-1.amazonaws.com/category
+APP_PORT=80
