--- a/BackEnd/Domains/Products/CreateProduct/.env
+++ b/BackEnd/Domains/Products/CreateProduct/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://mongodb-products:27017/products_db
-APP_PORT=8082
-GRAPHQL_URL=http://graphql-gateway:8080/graphql
+MONGO_URI=mongodb+srv://admin:1234PDistribuida@category.dloun.mongodb.net/product_db?retryWrites=true&w=majority
+APP_PORT=80
+GRAPHQL_URL=ec2-18-204-19-80.compute-1.amazonaws.com/graphql
